--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- ATTRIBUTE DELCARATIONS -->
-    <attr name="textStyle">
-        <flag name="normal" value="0" />
-        <flag name="bold" value="1" />
-        <flag name="italic" value="2" />
-        <flag name="black" value="8" />
-        <flag name="condensed" value="16" />
-        <flag name="light" value="32" />
-        <flag name="medium" value="64" />
-        <flag name="thin" value="128" />
-    </attr>
-
     <!-- STYLEABLE DECLARATIONS -->
     <!-- TextView -->
     <declare-styleable name="TextView">
-        <attr name="textStyle" />
+        <attr name="textStyle" format="enum">
+            <enum name="normal" value="0" />
+            <enum name="bold" value="1" />
+            <enum name="italic" value="2" />
+            <enum name="black" value="8" />
+            <enum name="condensed" value="16" />
+            <enum name="light" value="32" />
+            <enum name="medium" value="64" />
+            <enum name="thin" value="128" />
+        </attr>
         <attr name="textAllCaps" format="boolean" />
     </declare-styleable>
 
