--- a/project/res/color/tablet_filter_price_text.xml
+++ b/project/res/color/tablet_filter_price_text.xml
@@ -2,6 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_enabled="false" android:color="#800558c4"/>
-    <item android:color="#0558c4"/>
+    <item android:color="#2970cc"/>
 
 </selector>
