--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -66,4 +66,36 @@
         <item name="calendarInvalidDaysColor">#313132</item>
     </style>
 
+    <!-- TextView styling -->
+
+    <style name="V2.Widget.TextView" />
+
+    <style name="V2.Widget.TextView.FilterTitle">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#4c5156</item>
+        <item name="textStyle">normal</item>
+    </style>
+
+    <style name="V2.Widget.TextView.FilterHeader">
+        <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">#818181</item>
+        <item name="textStyle">normal</item>
+        <item name="textAllCaps">true</item>
+    </style>
+
+    <style name="V2.Widget.RadioButton" />
+
+    <style name="V2.Widget.RadioButton.Filter">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">fill_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:button">@android:color/transparent</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/sliding_group_text</item>
+        <item name="android:textSize">14sp</item>
+        <item name="textStyle">normal</item>
+    </style>
+
 </resources>
