--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -84,6 +84,13 @@
         <item name="textAllCaps">true</item>
     </style>
 
+    <style name="V2.Widget.TextView.FakeSpinner">
+        <item name="android:background">@drawable/fake_spinner_default_holo_light</item>
+        <item name="android:paddingLeft">12dp</item>
+        <item name="android:textColor">#4c5156</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
     <style name="V2.Widget.RadioButton" />
 
     <style name="V2.Widget.RadioButton.Filter">
