--- a/project/res/drawable/bg_flight_summary_row_tablet.xml
+++ b/project/res/drawable/bg_flight_summary_row_tablet.xml
@@ -10,7 +10,7 @@
         android:right="12dp"
         android:top="6dp">
         <shape>
-            <solid android:color="#2A445E" />
+            <solid android:color="@color/bg_section_flight_leg" />
 
             <corners android:radius="@dimen/tablet_result_corner_radius" />
         </shape>
