--- a/project/res/layout/section_flight_leg_summary_tablet.xml
+++ b/project/res/layout/section_flight_leg_summary_tablet.xml
@@ -22,7 +22,7 @@
             android:layout_weight="1"
             android:orientation="vertical" >
 
-            <TextView
+            <com.expedia.bookings.widget.TextView
                 android:id="@+id/flight_time_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -31,9 +31,9 @@
                 android:text="11:04AM to 10:59PM"
                 android:textColor="#ffffff"
                 android:textSize="@dimen/tablet_result_row_primary_text_size"
-                android:textStyle="bold" />
+                app:textStyle="medium" />
 
-            <TextView
+            <com.expedia.bookings.widget.TextView
                 android:id="@+id/airline_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -41,9 +41,10 @@
                 android:singleLine="true"
                 android:text="DELTA"
                 android:textColor="#ffffff"
-                android:textSize="@dimen/tablet_result_row_secondary_text_size" />
+                android:textSize="@dimen/tablet_result_row_secondary_text_size"
+                app:textStyle="light"/>
 
-            <TextView
+            <com.expedia.bookings.widget.TextView
                 android:id="@+id/operating_carrier_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -54,10 +55,11 @@
                 android:drawablePadding="4dp"
                 android:textColor="#7F8286"
                 android:textSize="@dimen/tablet_result_row_secondary_text_size"
+                app:textStyle="light"
                 android:visibility="gone" />
         </LinearLayout>
 
-        <TextView
+        <com.expedia.bookings.widget.TextView
             android:id="@+id/price_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -65,7 +67,7 @@
             android:text="$180"
             android:textColor="#ffffff"
             android:textSize="@dimen/tablet_result_row_price_size"
-            android:textStyle="bold" />
+            app:textStyle="medium" />
     </LinearLayout>
 
     <com.expedia.bookings.widget.FlightTripView
@@ -78,7 +80,8 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
         app:flightLineColor="#ffffff"
-        app:waypointTextColor="#AAB4BE"
+        app:waypointTextColor="#bdc5cf"
+        app:waypointTextSize="@dimen/tablet_result_row_secondary_text_size"
         app:waypointTextTopMargin="4dp" />
 
 </com.expedia.bookings.section.FlightLegSummarySectionTablet>
