Fix flight tablet list polish
Address concern:
https://phabricator.mobiata.com/rEBADe55e5d3c19e44621d6250d6bb35e4e55a6377c97

--- a/project/res/layout/section_flight_leg_summary_tablet.xml
+++ b/project/res/layout/section_flight_leg_summary_tablet.xml
@@ -82,6 +82,7 @@
         app:flightLineColor="#ffffff"
         app:waypointTextColor="#bdc5cf"
         app:waypointTextSize="@dimen/tablet_result_row_secondary_text_size"
-        app:waypointTextTopMargin="4dp" />
+        app:waypointTextTopMargin="4dp"
+        app:waypointTextTypeface="medium"/>
 
 </com.expedia.bookings.section.FlightLegSummarySectionTablet>
