--- a/project/res/layout/fragment_tablet_hotels_rooms_and_rates.xml
+++ b/project/res/layout/fragment_tablet_hotels_rooms_and_rates.xml
@@ -17,13 +17,14 @@
             android:orientation="vertical" >
 
             <FrameLayout
-                android:id="@+id/rooms_and_rates_content_top"
+                android:id="@+id/hotel_header_container"
                 android:layout_width="match_parent"
                 android:layout_height="200dp" >
 
                 <!-- Hotel image (#1822) -->
 
                 <TextView
+                    android:id="@+id/hotel_header_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="#FF0000"
@@ -33,6 +34,7 @@
                 <!-- Hotel header section (#2058) -->
 
                 <LinearLayout
+                    android:id="@+id/hotel_header_caption"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
                     android:layout_gravity="bottom"
@@ -57,6 +59,7 @@
             <!-- Reviews section (#2059) -->
 
             <FrameLayout
+                android:id="@+id/reviews_container"
                 android:layout_width="match_parent"
                 android:layout_height="80dp" >
 
@@ -71,6 +74,7 @@
             <!-- Amenities section (#2060) -->
 
             <FrameLayout
+                android:id="@+id/amenities_container"
                 android:layout_width="match_parent"
                 android:layout_height="80dp" >
 
@@ -111,6 +115,28 @@
                     android:background="#00FFFF"
                     android:gravity="center"
                     android:text="Rate #3" />
+            </LinearLayout>
+
+            <!-- Hotel Description section -->
+
+            <LinearLayout
+                android:id="@+id/description_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#800000"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Description"
+                    android:textColor="#ffffff" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="64dp"
+                    android:text="Long hotel description that most people probably won&apos;t read, with bullets, rules, etc. If you made it this far, you win. Congrats."
+                    android:textColor="#ffffff" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
