--- a/project/res/layout/fragment_tablet_hotels_rooms_and_rates.xml
+++ b/project/res/layout/fragment_tablet_hotels_rooms_and_rates.xml
@@ -33,27 +33,98 @@
 
                 <!-- Hotel header section (#2058) -->
 
-                <LinearLayout
+                <RelativeLayout
                     android:id="@+id/hotel_header_caption"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
                     android:layout_gravity="bottom"
                     android:background="#80808080"
-                    android:orientation="horizontal" >
-
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1" />
+                    android:padding="16dp" >
 
                     <Button
                         android:id="@+id/button_add_to_trip"
                         android:layout_width="wrap_content"
                         android:layout_height="48dp"
-                        android:layout_gravity="center_vertical|right"
+                        android:layout_alignParentRight="true"
+                        android:layout_gravity="center_vertical"
                         android:text="Add for $390"
                         android:textAllCaps="true" />
-                </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_gravity="center_vertical"
+                        android:layout_toLeftOf="@id/button_add_to_trip"
+                        android:orientation="vertical" >
+
+                        <TextView
+                            android:id="@+id/hotel_header_hotel_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:includeFontPadding="false"
+                            android:text="Castille Paris"
+                            android:textColor="#ffffff"
+                            android:textSize="24sp" />
+
+                        <LinearLayout
+                            android:id="@+id/rating_container"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" >
+
+                            <TextView
+                                android:id="@+id/not_rated_text_view"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:includeFontPadding="false"
+                                android:text="@string/not_rated"
+                                android:textColor="@color/hotel_cell_secondary_color"
+                                android:visibility="gone" />
+
+                            <RatingBar
+                                android:id="@+id/star_rating_bar"
+                                style="?attr/hotelDetailsStarRatingStyle"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:isIndicator="true"
+                                android:numStars="5"
+                                android:rating="2.5"
+                                android:stepSize=".5" />
+
+                            <TextView
+                                android:id="@+id/text_num_stars"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:includeFontPadding="false"
+                                android:paddingLeft="4dp"
+                                android:paddingRight="8dp"
+                                android:text="3 stars"
+                                android:textColor="@color/hotel_cell_secondary_color" />
+
+                            <RatingBar
+                                android:id="@+id/user_rating_bar"
+                                style="?attr/hotelDetailsUserRatingStyle"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:isIndicator="true"
+                                android:numStars="5"
+                                android:rating="2.5"
+                                android:stepSize=".5" />
+
+                            <TextView
+                                android:id="@+id/text_num_reviews"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:includeFontPadding="false"
+                                android:paddingLeft="4dp"
+                                android:paddingRight="8dp"
+                                android:text="140 reviews"
+                                android:textColor="@color/hotel_cell_secondary_color" />
+                        </LinearLayout>
+                    </LinearLayout>
+                </RelativeLayout>
             </FrameLayout>
 
             <!-- Reviews section (#2059) -->
