--- a/project/res/layout/fragment_flight_tablet_filter.xml
+++ b/project/res/layout/fragment_flight_tablet_filter.xml
@@ -42,6 +42,8 @@
                 style="@style/V2.Widget.TextView.FilterHeader"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_tablet_departure_arrow"
+                android:drawablePadding="12dp"
                 android:text="@string/hint_departure_airport" />
 
         <com.expedia.bookings.widget.AirportFilterWidget
@@ -57,6 +59,8 @@
                 style="@style/V2.Widget.TextView.FilterHeader"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_tablet_arrival_arrow"
+                android:drawablePadding="12dp"
                 android:text="@string/hint_arrival_airport" />
 
         <com.expedia.bookings.widget.AirportFilterWidget
