--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -93,6 +93,17 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="V2.Widget.TextView.FlightStatistic">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:drawablePadding">8dp</item>
+        <item name="textStyle">light</item>
+    </style>
+
+    <!-- RadioButton styling -->
+
     <style name="V2.Widget.RadioButton" />
 
     <style name="V2.Widget.RadioButton.Filter">
