--- a/project/res/values/colors.xml
+++ b/project/res/values/colors.xml
@@ -156,7 +156,8 @@
     <color name="dialog_window_holo_blue_light">#ff33b5e5</color>
 
     <!-- Tablet colors -->
-    <color name="tablet_list_bg">#FFF4F2F1</color>
+    <color name="tablet_grey_pane_bg">#f2f2f2</color>
+    <color name="tablet_white_pane_bg">#ffffff</color>
     <color name="tablet_results_ab_default">@android:color/transparent</color>
     <color name="tablet_results_ab_flights">#142B42</color>
     <color name="tablet_bg_tiles_blend">#232c45</color>
