--- a/project/res/drawable/bg_flight_summary_row_tablet.xml
+++ b/project/res/drawable/bg_flight_summary_row_tablet.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item>
-        <color android:color="@color/tablet_list_bg" />
+        <color android:color="@color/tablet_white_pane_bg" />
     </item>
     <item
         android:bottom="6dp"
