--- a/project/res/layout/fragment_flight_tablet_filter.xml
+++ b/project/res/layout/fragment_flight_tablet_filter.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/tablet_list_bg"
+            android:background="@color/tablet_grey_pane_bg"
             android:paddingBottom="8dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
