--- a/project/res/layout/fragment_hotel_filters.xml
+++ b/project/res/layout/fragment_hotel_filters.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/tablet_list_bg"
+    android:background="@color/tablet_white_pane_bg"
     android:orientation="vertical" >
 
     <RelativeLayout
