--- a/project/res/layout/section_hotel_summary_tablet.xml
+++ b/project/res/layout/section_hotel_summary_tablet.xml
@@ -3,7 +3,7 @@
     xmlns:mobiata="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="120dp"
-    android:background="@color/tablet_list_bg"
+    android:background="@color/tablet_white_pane_bg"
     android:paddingBottom="6dp"
     android:paddingLeft="12dp"
     android:paddingRight="12dp"
