--- a/project/res/layout/fragment_flight_tablet_filter.xml
+++ b/project/res/layout/fragment_flight_tablet_filter.xml
@@ -16,23 +16,18 @@
 
         <com.expedia.bookings.widget.TextView
                 style="@style/V2.Widget.TextView.FilterTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
                 android:text="@string/Sort_and_Filter" />
 
         <com.expedia.bookings.widget.TextView
                 style="@style/V2.Widget.TextView.FilterHeader"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:text="@string/Sort_By" />
 
         <include layout="@layout/include_flight_tablet_sort" />
 
         <com.expedia.bookings.widget.TextView
                 style="@style/V2.Widget.TextView.FilterHeader"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:text="@string/stops" />
 
         <include layout="@layout/include_flight_tablet_filter" />
@@ -40,36 +35,24 @@
         <com.expedia.bookings.widget.TextView
                 android:id="@+id/departure_airports_header"
                 style="@style/V2.Widget.TextView.FilterHeader"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_tablet_departure_arrow"
-                android:drawablePadding="12dp"
-                android:text="@string/hint_departure_airport" />
+                android:text="@string/departure_airports" />
 
         <com.expedia.bookings.widget.AirportFilterWidget
                 android:id="@+id/departure_airports_widget"
-                style="@style/V2.Widget.TextView.FakeSpinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="24dp"
-                android:singleLine="true" />
+                style="@style/V2.Widget.TextView.FakeSpinner.AirportFilter"
+                android:drawableLeft="@drawable/ic_tablet_departure_arrow" />
 
         <com.expedia.bookings.widget.TextView
                 android:id="@+id/arrival_airports_header"
                 style="@style/V2.Widget.TextView.FilterHeader"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_tablet_arrival_arrow"
-                android:drawablePadding="12dp"
-                android:text="@string/hint_arrival_airport" />
+                android:text="@string/arrival_airports" />
 
         <com.expedia.bookings.widget.AirportFilterWidget
                 android:id="@+id/arrival_airports_widget"
-                style="@style/V2.Widget.TextView.FakeSpinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="24dp"
-                android:singleLine="true" />
+                style="@style/V2.Widget.TextView.FakeSpinner.AirportFilter"
+                android:drawableLeft="@drawable/ic_tablet_arrival_arrow" />
 
         <com.expedia.bookings.widget.TextView
                 style="@style/V2.Widget.TextView.FilterHeader"
@@ -79,11 +62,7 @@
 
         <LinearLayout
                 android:id="@+id/filter_airline_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:divider="@drawable/grey_divider"
-                android:orientation="vertical"
-                android:showDividers="middle" />
+                style="@style/V2.Widget.LinearLayout.FlightFilter" />
     </LinearLayout>
 
 </ScrollView>
