--- a/project/res/layout/snippet_flight_airport_filter.xml
+++ b/project/res/layout/snippet_flight_airport_filter.xml
@@ -7,9 +7,7 @@
 
     <LinearLayout
             android:id="@+id/airport_filter_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical" />
+            style="@style/V2.Widget.LinearLayout.FlightFilter" />
 
     <Button
             android:id="@+id/airport_filter_done"
