--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -68,18 +68,33 @@
         <item name="calendarInvalidDaysColor">#313132</item>
     </style>
 
+    <!-- LinearLayout styling -->
+    <style name="V2.Widget.LinearLayout" />
+
+    <style name="V2.Widget.LinearLayout.FlightFilter">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:divider">@drawable/grey_divider</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:showDividers">middle</item>
+    </style>
+
     <!-- TextView styling -->
 
     <style name="V2.Widget.TextView" />
 
     <style name="V2.Widget.TextView.FilterTitle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">@dimen/tablet_filter_title_margin_bottom</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">#4c5156</item>
         <item name="textStyle">normal</item>
     </style>
 
     <style name="V2.Widget.TextView.FilterHeader">
-        <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">15sp</item>
         <item name="android:textColor">#818181</item>
         <item name="textStyle">normal</item>
@@ -87,10 +102,20 @@
     </style>
 
     <style name="V2.Widget.TextView.FakeSpinner">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/fake_spinner_default_holo_light</item>
         <item name="android:paddingLeft">12dp</item>
+        <item name="android:paddingTop">16dp</item>
+        <item name="android:paddingBottom">16dp</item>
+        <item name="android:singleLine">true</item>
         <item name="android:textColor">#4c5156</item>
         <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="V2.Widget.TextView.FakeSpinner.AirportFilter">
+        <item name="android:drawablePadding">12dp</item>
+        <item name="android:layout_marginBottom">@dimen/tablet_filter_white_space</item>
     </style>
 
     <style name="V2.Widget.TextView.FlightStatistic">
