--- a/project/res/layout/fragment_flight_tablet_filter.xml
+++ b/project/res/layout/fragment_flight_tablet_filter.xml
@@ -23,14 +23,61 @@
                 android:layout_marginBottom="8dp"
                 android:text="@string/Sort_By" />
 
-        <include layout="@layout/include_flight_tablet_sort" />
+        <com.expedia.bookings.widget.SlidingRadioGroup
+                android:id="@+id/flight_sort_control"
+                style="@style/Widget.SlidingRadioGroup.TabletFilterControls"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/tablet_filter_white_space" >
+
+            <RadioButton
+                    android:id="@+id/flight_sort_price"
+                    style="@style/V2.Widget.RadioButton.Filter"
+                    android:text="@string/sort_description_price" />
+
+            <RadioButton
+                    android:id="@+id/flight_sort_departs"
+                    style="@style/V2.Widget.RadioButton.Filter"
+                    android:text="@string/sort_description_departure" />
+
+            <RadioButton
+                    android:id="@+id/flight_sort_arrives"
+                    style="@style/V2.Widget.RadioButton.Filter"
+                    android:text="@string/sort_description_arrival" />
+
+            <RadioButton
+                    android:id="@+id/flight_sort_duration"
+                    style="@style/V2.Widget.RadioButton.Filter"
+                    android:text="@string/sort_description_duration" />
+        </com.expedia.bookings.widget.SlidingRadioGroup>
 
         <com.expedia.bookings.widget.TextView
                 style="@style/V2.Widget.TextView.FilterHeader"
                 android:layout_marginBottom="8dp"
                 android:text="@string/stops" />
 
-        <include layout="@layout/include_flight_tablet_filter" />
+        <com.expedia.bookings.widget.SlidingRadioGroup
+                android:id="@+id/flight_filter_control"
+                style="@style/Widget.SlidingRadioGroup.TabletFilterControls"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/tablet_filter_white_space" >
+
+            <RadioButton
+                    android:id="@+id/flight_filter_stop_one_or_less"
+                    style="@style/V2.Widget.RadioButton.Filter"
+                    android:text="@string/stop_description__max" />
+
+            <RadioButton
+                    android:id="@+id/flight_filter_stop_none"
+                    style="@style/V2.Widget.RadioButton.Filter"
+                    android:text="@string/stop_description__nonstop" />
+
+            <RadioButton
+                    android:id="@+id/flight_filter_stop_any"
+                    style="@style/V2.Widget.RadioButton.Filter"
+                    android:text="@string/stop_description_any" />
+        </com.expedia.bookings.widget.SlidingRadioGroup>
 
         <com.expedia.bookings.widget.TextView
                 android:id="@+id/departure_airports_header"
