--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -136,7 +136,10 @@
         <item name="android:layout_height">fill_parent</item>
         <item name="android:layout_weight">1</item>
         <item name="android:button">@android:color/transparent</item>
-        <item name="android:padding">8dp</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingTop">12dp</item>
+        <item name="android:paddingRight">8dp</item>
+        <item name="android:paddingBottom">12dp</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/sliding_group_text</item>
         <item name="android:textSize">14sp</item>
