--- a/project/res/layout/fragment_tablet_hotel_details.xml
+++ b/project/res/layout/fragment_tablet_hotel_details.xml
@@ -210,15 +210,12 @@
             <FrameLayout
                 android:id="@+id/amenities_container"
                 android:layout_width="match_parent"
-                android:layout_height="80dp" >
+                android:layout_height="80dp"
+                android:background="@color/tablet_list_bg" >
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="#0000FF"
-                    android:gravity="center"
-                    android:text="Amenities Section"
-                    android:textColor="#ffffff" />
+                <include
+                    layout="@layout/include_amenities"
+                    android:visibility="visible" />
             </FrameLayout>
 
             <!-- Rooms and Rates section -->
