2361 - flight list highlight on selection
Highlight the selected flight in baby blue for better visual
indication of which flight you're looking at in the details.

--- a/project/res/layout/fragment_tablet_results_list.xml
+++ b/project/res/layout/fragment_tablet_results_list.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="56dp"
+        android:choiceMode="singleChoice"
         android:cacheColorHint="@color/tablet_white_pane_bg"
         android:divider="@color/tablet_white_pane_bg"
         android:dividerHeight="8dp"
