--- a/project/res/drawable/bg_flight_summary_row_tablet.xml
+++ b/project/res/drawable/bg_flight_summary_row_tablet.xml
@@ -4,16 +4,42 @@
     <item>
         <color android:color="@color/tablet_white_pane_bg" />
     </item>
-    <item
-        android:bottom="6dp"
-        android:left="12dp"
-        android:right="12dp"
-        android:top="6dp">
-        <shape>
-            <solid android:color="@color/bg_section_flight_leg" />
-
-            <corners android:radius="@dimen/tablet_result_corner_radius" />
-        </shape>
+    <item android:bottom="6dp"
+          android:left="12dp"
+          android:right="12dp"
+          android:top="6dp">
+        <selector>
+            <item android:state_pressed="true">
+                <shape>
+                    <solid android:color="#4572ad" />
+                    <corners android:radius="@dimen/tablet_result_corner_radius" />
+                </shape>
+            </item>
+            <item android:state_checked="true">
+                <shape>
+                    <solid android:color="#4572ad" />
+                    <corners android:radius="@dimen/tablet_result_corner_radius" />
+                </shape>
+            </item>
+            <item android:state_activated="true">
+                <shape>
+                    <solid android:color="#4572ad" />
+                    <corners android:radius="@dimen/tablet_result_corner_radius" />
+                </shape>
+            </item>
+            <item android:state_selected="true">
+                <shape>
+                    <solid android:color="#4572ad" />
+                    <corners android:radius="@dimen/tablet_result_corner_radius" />
+                </shape>
+            </item>
+            <item>
+                <shape>
+                    <solid android:color="#374f6e" />
+                    <corners android:radius="@dimen/tablet_result_corner_radius" />
+                </shape>
+            </item>
+        </selector>
     </item>
 
 </layer-list>
